--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Burundi Digital Marketboard</title>
+  <title>outique "Broskie"</title>
 
   <!-- Meta description (Kinyarwanda) -->
-  <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, PWA, na live chat ya Tawk.to." />
+  <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, na live chat igezweho ." />
   <meta name="theme-color" content="#0f172a" />
 
   <!-- PWA -->
@@ -33,38 +33,38 @@
     <!-- HERO -->
     <header id="hero" class="hero" role="banner">
       <div class="hero-inner">
-        <h1 class="title">Karibu kuri Burundi Digital Marketboard</h1>
+        <h1 class="title">Karibu kuri Boutique "chez Broskie 👌🏽"</h1>
         <p class="subtitle">
           Isoko rya digitale ryagutse — ibiciro byoroheje, serivisi yihuse, ndetse na WhatsApp support.
         </p>
         <div class="hero-ctas">
-          <a id="cta-buy" class="btn primary" href="#stock">Reba ibicuruzwa</a>
+          <a id="cta-buy" class="btn primary" href="#stock">Raba ibicuruzwa</a>
           <a class="btn ghost" href="#contact">Twandikire</a>
         </div>
-        <p class="hero-note muted">PWA, Live Chat, na offline support kuri GitHub Pages</p>
+        <p class="hero-note muted"> Live Chat, na offline support </p>
       </div>
     </header>
 
     <!-- PRODUCTS -->
     <section id="stock" class="section stock" aria-labelledby="stock-title">
-      <h2 id="stock-title" class="section-title">Ibicuruzwa byacu</h2>
-      <p class="muted">Kanda ku gikoresho kugira ngo ubone ibisobanuro no kuduhamagara kuri WhatsApp.</p>
+      <h2 id="stock-title" class="section-title">Ibicuruzwa vyacu</h2>
+      <p class="muted">Kanda ku gicuruzwa kugira ngo ubone ibisobanuro no kuduhamagara kuri WhatsApp.</p>
       <div id="products-grid" class="grid" aria-live="polite"></div>
     </section>
 
     <!-- TESTIMONIALS -->
     <section id="testimonials" class="section testimonials" aria-labelledby="testi-title">
-      <h2 id="testi-title" class="section-title">Ibyavuzwe n'abakiriya</h2>
+      <h2 id="testi-title" class="section-title">Ivyavuzwe n'abakiriya</h2>
       <div id="testi-grid" class="testi-grid" role="list"></div>
     </section>
 
     <!-- DAILY JOKE -->
     <section id="jokes" class="section jokes" aria-labelledby="joke-title">
-      <h2 id="joke-title" class="section-title">Urwenya rwa buri munsi</h2>
+      <h2 id="joke-title" class="section-title">Blague za buri munsi🔥😂</h2>
       <div class="joke-card" role="region" aria-live="polite">
-        <p id="joke-text" class="joke-text">Tegereza urwenya...</p>
+        <p id="joke-text" class="joke-text">iyindi blague ...</p>
         <div class="joke-actions">
-          <button id="joke-spin" class="btn">Tega urwenya rundi</button>
+          <button id="joke-spin" class="btn">fyonda ubone indi blague 😁</button>
         </div>
       </div>
     </section>
@@ -87,7 +87,7 @@
         <!-- Support -->
         <aside class="support-wrap" aria-labelledby="support-title">
           <h3 id="support-title">Ubufasha bwa WhatsApp</h3>
-          <p class="muted">Twohereze ubutumwa; autoresponder izakira ubutumwa bwa mbere.</p>
+          <p class="muted">Turungikire ubutumwa; autoresponder izokwakira ubutumwa bwa mbere.</p>
 
           <!-- WhatsApp CTA (hindura numero yawe) -->
           <a class="btn whatsapp" href="https://wa.me/25771633859?text=Muraho%20ndashaka%20ubufasha" target="_blank" rel="noopener">
@@ -102,7 +102,7 @@
 
           <!-- Fallback local contact form (igaragazwa iyo Tawk.to itari online) -->
           <div id="offline-contact" class="offline-contact hidden" aria-hidden="true">
-            <h4>Ohereza ubutumwa (nta seriveri ikoreshwa)</h4>
+            <h4>Runkika ubutumwa (mugihe tutabonetse online)</h4>
             <form id="contact-form" autocomplete="off">
               <label>Izina ryawe
                 <input name="name" required />
@@ -113,7 +113,7 @@
               <label>Ubutumwa bwawe
                 <textarea name="message" rows="4" required></textarea>
               </label>
-              <button type="submit" class="btn">Ohereza ubutumwa</button>
+              <button type="submit" class="btn">Rungika ubutumwa</button>
             </form>
             <p id="contact-saved" class="muted hidden">✅ Ubutumwa bwawe bwabitswe neza kuri mudasobwa yawe (offline).</p>
           </div>
