--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>outique "Broskie"</title>
+  <title>Boutique "Broskie"</title>
 
   <!-- Meta description (Kinyarwanda) -->
   <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, na live chat igezweho ." />
