--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <meta name="theme-color" content="#0f172a" />
 
   <!-- PWA -->
-  <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="icons/icon-192.png" sizes="192x192" />
-  <link rel="apple-touch-icon" href="icons/icon-512.png" />
-
+  <link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+<meta name="theme-color" content="#ffd6e7">
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
