--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
 <meta name="theme-color" content="#ffd6e7">
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/banner.css"> <!-- separate banner styles -->
+</head>
+<body>
+  ...
+  <section id="installBanner" class="install-banner hidden">
+    <p>📲 Shyira App ku murongo wawe!</p>
+    <button id="installBtn" class="install-banner__btn">Install App</button>
+  </section>
 </head>
 <body>
   <!-- Background video + overlay -->
