--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Boutique "Broskie"</title>
 
   <!-- Meta description (Kinyarwanda) -->
-  <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, na live chat igezweho ." />
-  <meta name="theme-color" content="#0f172a" />
+  <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, na live chat igezweho." />
+  <meta name="theme-color" content="#ffd6e7" />
 
   <!-- PWA -->
   <link rel="manifest" href="/manifest.json">
-<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
-<meta name="theme-color" content="#ffd6e7">
+  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
+
   <!-- Styles -->
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/banner.css"> <!-- separate banner styles -->
@@ -23,8 +23,7 @@
     <p>📲 Shyira App ku murongo wawe!</p>
     <button id="installBtn" class="install-banner__btn">Install App</button>
   </section>
-</head>
-<body>
+</body>
   <!-- Background video + overlay -->
   <div id="bg-wrap" class="bg-wrap" aria-hidden="true">
     <video id="bg-video" class="bg-video" autoplay muted loop playsinline poster="placeholder-poster.jpg">
