--- a/index.html
+++ b/index.html
@@ -108,27 +108,23 @@
             <small class="muted">Skana QR ukoresheje WhatsApp</small>
           </div>
 
-          <!-- Fallback local contact form (igaragazwa iyo Tawk.to itari online) -->
-          <div id="offline-contact" class="offline-contact hidden" aria-hidden="true">
-            <h4>Runkika ubutumwa (mugihe tutabonetse online)</h4>
-            <form id="contact-form" autocomplete="off">
-              <label>Izina ryawe
-                <input name="name" required />
-              </label>
-              <label>Imeli yawe
-                <input name="email" type="email" required />
-              </label>
-              <label>Ubutumwa bwawe
-                <textarea name="message" rows="4" required></textarea>
-              </label>
-              <button type="submit" class="btn">Rungika ubutumwa</button>
-            </form>
-            <p id="contact-saved" class="muted hidden">✅ Ubutumwa bwawe bwabitswe neza kuri mudasobwa yawe (offline).</p>
-          </div>
-        </aside>
-      </div>
-    </section>
-
+         <!-- Fallback contact form (igaragazwa iyo Tawk.to itari online) -->
+<div id="offline-contact" class="offline-contact hidden" aria-hidden="true">
+  <h4>Rungika ubutumwa (mugihe tutabonetse online)</h4>
+  <form id="contact-form" autocomplete="off">
+    <label>Izina ryawe
+      <input name="name" required />
+    </label>
+    <label>Imeli yawe
+      <input name="email" type="email" required />
+    </label>
+    <label>Ubutumwa bwawe
+      <textarea name="message" rows="4" required></textarea>
+    </label>
+    <button type="submit" class="btn">Rungika ubutumwa</button>
+  </form>
+  <p id="contact-saved" class="muted hidden">📧 Email client yawe yafunguwe kugira ngo wohereze ubutumwa.</p>
+</div>
     <!-- FOOTER -->
     <footer class="site-footer" role="contentinfo">
       <div class="footer-grid">
