--- a/index.html
+++ b/index.html
@@ -134,14 +134,30 @@
           <p>Telefoni: +257 71633859</p>
         </div>
 
-        <div class="socials">
-          <h4>Imbuga nkoranyambaga</h4>
-          <div class="icons">
-            <a href="#" aria-label="Facebook" class="icon">FB</a>
-            <a href="#" aria-label="Instagram" class="icon">IG</a>
-            <a href="#" aria-label="X" class="icon">X</a>
-          </div>
-        </div>
+  <!-- Social Media Section -->
+<div class="socials">
+  <h4>Imbuga nkoranyambaga</h4>
+  <div class="icons">
+    <a href="https://www.facebook.com/username" aria-label="Facebook" target="_blank" rel="noopener">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/username" aria-label="Instagram" target="_blank" rel="noopener">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://x.com/username" aria-label="X" target="_blank" rel="noopener">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+    <a href="https://www.youtube.com/@username" aria-label="YouTube" target="_blank" rel="noopener">
+      <i class="fab fa-youtube"></i>
+    </a>
+    <a href="https://www.tiktok.com/@username" aria-label="TikTok" target="_blank" rel="noopener">
+      <i class="fab fa-tiktok"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/username" aria-label="LinkedIn" target="_blank" rel="noopener">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+  </div>
+</div>
 
         <div class="footer-qr">
           <img src="placeholder-qr.png" alt="QR code - contact" width="120" height="120" />
