--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="footer-grid">
         <div class="contacts">
           <h4>Amakuru y’itumanaho</h4>
-          <p>Email: <a href="mailto:info@example.com">info@example.com</a></p>
+          <p>Email: <a href="mailto: ornoirbruce5@gmail.com">ornoirbruce5@gmail.com</a></p>
           <p>Telefoni: <a href="tel:+25771633859">+257 71633859</a></p>
         </div>
 
