--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Boutique "Broskie"</title>
+  <title>Boutique "Sirgy"</title>
 
   <!-- Meta description (Kinyarwanda) -->
   <meta name="description" content="Isoko rya digitale rigezweho: ibicuruzwa, WhatsApp, na live chat igezweho." />
@@ -41,7 +41,7 @@
     <!-- HERO -->
     <header id="hero" class="hero" role="banner" aria-label="Hero">
       <div class="hero-inner">
-        <h1 class="title">Karibu kuri Boutique "chez Broskie 👌🏽"</h1>
+        <h1 class="title">Karibu kuri Boutique "chez Sirgy 👌🏽"</h1>
         <p class="subtitle">
           Isoko rya digitale ryagutse — ibiciro byoroheje, serivisi yihuse, ndetse na WhatsApp support.
         </p>
@@ -70,26 +70,6 @@
       </div>
     </section>
 
-  <!-- DAILY JOKE -->
-<section id="jokes" class="section jokes" aria-labelledby="joke-title">
-  <h2 id="joke-title" class="section-title">Blague za buri munsi 🔥😂</h2>
-  
-  <div class="joke-card" role="region" aria-live="polite" aria-label="Joke card">
-    <!-- Joke container -->
-    <div id="joke-box" class="joke-box">
-      <!-- JS izasimbura ibi -->
-      <p class="joke-text">Iyindi blague ...</p>
-    </div>
-    
-    <!-- Actions -->
-    <div class="joke-actions">
-      <button id="joke-spin" class="btn" aria-label="Fyonda ubone indi blague">
-        fyonda ubone indi blague 😁
-      </button>
-    </div>
-  </div>
-  </section>
-
     <!-- CONTACT + MAP + WHATSAPP + FALLBACK -->
     <section id="contact" class="section contact" aria-labelledby="contact-title">
       <h2 id="contact-title" class="section-title">Aho turi & Ubufasha</h2>
@@ -111,7 +91,7 @@
           <p class="muted">Turungikire ubutumwa; autoresponder izokwakira ubutumwa bwa mbere.</p>
 
           <!-- WhatsApp CTA -->
-          <a class="btn whatsapp" href="https://wa.me/25771633859?text=Muraho%20ndashaka%20ubufasha" target="_blank" rel="noopener" aria-label="Andika kuri WhatsApp">
+          <a class="btn whatsapp" href="https://wa.me/257 67 69 11 24?text=Muraho%20ndashaka%20ubufasha" target="_blank" rel="noopener" aria-label="Andika kuri WhatsApp">
             Andika kuri WhatsApp
           </a>
 
@@ -147,8 +127,8 @@
       <div class="footer-grid">
         <div class="contacts">
           <h4>Amakuru y’itumanaho</h4>
-          <p>Email: <a href="mailto:ornoirbruce5@gmail.com">ornoirbruce5@gmail.com</a></p>
-          <p>Telefoni: <a href="tel:+25771633859">+257 71633859</a></p>
+          <p>Email: <a href="mailto:Syriaquenshimirimana@gmail.com">Syriaquenshimirimana@gmail.com</a></p>
+          <p>Telefoni: <a href="tel:+25767691124"></a></p>
         </div>
 
         <!-- Social Media Section -->
@@ -233,7 +213,7 @@
         const email = form.email.value.trim();
         const message = form.message.value.trim();
         if (!name || !email || !message) return;
-        const subject = encodeURIComponent('Ubutumwa - Boutique Broskie');
+        const subject = encodeURIComponent('Ubutumwa - Boutique sirgy');
         const body = encodeURIComponent(`Izina: ${name}\nImeli: ${email}\n\n${message}`);
         window.location.href = `mailto:info@example.com?subject=${subject}&body=${body}`;
         if (saved) {
