--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         if (!name || !email || !message) return;
         const subject = encodeURIComponent('Ubutumwa - Boutique sirgy');
         const body = encodeURIComponent(`Izina: ${name}\nImeli: ${email}\n\n${message}`);
-        window.location.href = `mailto:info@example.com?subject=${subject}&body=${body}`;
+        window.location.href = `mailto:Syriaquenshimirimana@gmail.com?subject=${subject}&body=${body}`;
         if (saved) {
           saved.classList.remove('hidden');
           saved.setAttribute('aria-hidden', 'false');
